--- a/Components/Pages/Edit.razor
+++ b/Components/Pages/Edit.razor
@@ -1,3 +1,4 @@
 ﻿@page "/edit/{Slug}"
-@inject flashcard.utils.FlashCardService FlashCardService
+@using flashcard.Data
+@inject FlashCardService FlashCardService
 @rendermode InteractiveServer
