--- a/Components/Pages/Create.razor
+++ b/Components/Pages/Create.razor
@@ -5,6 +5,7 @@
 @using flashcard.utils
 @inject FlashCardService FlashCardService
 @inject NavigationManager Navigation
+@inject Microsoft.AspNetCore.Components.Authorization.AuthenticationStateProvider AuthenticationStateProvider
 @rendermode InteractiveServer
 
 <PageTitle>Create a Flashcard</PageTitle>
