feat(db): finalize the CRUD operations on supabase with EF

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -14,8 +14,8 @@
 			<div class="flex flex-1 justify-end px-2">
 				<div class="flex items-stretch">
 					<a href="/create" class="btn btn-ghost rounded-md ">Create</a>
-					<a href="/bookmark" class="hidden sm:btn sm:btn-ghost sm:rounded-md">My Bookmark</a>
-					<a href="/mydeck" class="hidden sm:btn sm:btn-ghost sm:rounded-md">My Deck</a>
+					<a href="/deckmark" class="hidden sm:btn sm:btn-ghost sm:rounded-md">My Deckmark</a>
+					<a href="/my-decks" class="hidden sm:btn sm:btn-ghost sm:rounded-md">My Decks</a>
 					<AuthorizeView>
 						<Authorized>
 							<AvatarComponent Profile="@userProfile"/>
