--- a/Components/Pages/Create.razor
+++ b/Components/Pages/Create.razor
@@ -7,28 +7,28 @@
 @inject NavigationManager Navigation
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @rendermode InteractiveServer
-
-<PageTitle>Create a Flashcard</PageTitle>
+  <!-- #region                              -->
+<PageTitle>Create a Flashcard Deck</PageTitle>
 <div class="flex flex-col py-10 max-w-xl mx-auto gap-3">
 	<div class="form-control w-full">
 		<div class="label">
 			<span class="label-text">Deck name</span>
 		</div>
 		<input type="text" placeholder="Type deck name" class="input input-bordered w-full rounded-lg"
-		       @bind="DeckName"/>
+		       @bind="deckName"/>
 	</div>
 	<div class="form-control w-full">
 		<div class="label">
 			<span class="label-text">Deck description</span>
 		</div>
 		<input type="text" placeholder="Type deck name" class="input input-bordered w-full rounded-lg"
-		       @bind="DeckDescription"/>
+		       @bind="deckDescription"/>
 	</div>
 	<div class="form-control w-full">
 		<div class="label">
 			<span class="label-text">Deck category</span>
 		</div>
-		<select class="select select-bordered rounded-lg max-[480px]:w-full" @bind="SelectedCategory">
+		<select class="select select-bordered rounded-lg max-[480px]:w-full" @bind="selectedCategory">
 			<option disabled selected>Select Category</option>
 			@foreach (var category in Category.GetCategoriesExceptAll())
 			{
@@ -76,7 +76,7 @@
 </div>
 <dialog id="aaaaaa" class="modal modal-bottom sm:modal-middle">
 	<div class="modal-box">
-		<form>
+		<form @onsubmit="HandleSave" @onsubmit:preventDefault>
 			<h3 class="text-lg font-bold">New Card</h3>
 			<div class="flex flex-col gap-5 py-3">
 				<textarea class="textarea textarea-bordered" placeholder="Question" @onchange="HandleQuestionChange"
@@ -87,11 +87,11 @@
 			<div class="flex flex-row justify-between">
 				<div onclick="aaaaaa.close()">
 					<button type="button" class="btn btn-sm btn-error text-white rounded-md"
-					        @onclick="HandleDiscard">
+					        @onclick="HandleDiscard" @onclick:preventDefault>
 						Discard
 					</button>
 				</div>
-				<button class="btn btn-sm btn-success rounded-md" @onclick="HandleSave">Save</button>
+				<button type="submit" class="btn btn-sm btn-success rounded-md" onclick="aaaaaa.close()">Save</button>
 			</div>
 		</form>
 	</div>
@@ -104,8 +104,8 @@
 		<div class="py-4">
 			<p>Are you sure you want to create this deck with @flashCardProblems.Count cards?</p>
 			<div class="mt-2">
-				<p><strong>Deck Name:</strong> @DeckName</p>
-				<p><strong>Category:</strong> @SelectedCategory</p>
+				<p><strong>Deck Name:</strong> @deckName</p>
+				<p><strong>Category:</strong> @selectedCategory</p>
 			</div>
 			<div class="mt-4">
 				<p><strong>Visibility:</strong></p>
@@ -136,9 +136,9 @@
 	</div>
 </dialog>
 
-debug deckName: @DeckName
+debug deckName: @deckName
 <br>
-debug selectedCategory: @SelectedCategory
+debug selectedCategory: @selectedCategory
 <br>
 debug tempQuestion: @tempQuestion
 <br>
