"Refactor deck creation and editing features in FlashCards

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -9,7 +9,7 @@
 	<div class="drawer-content">
 		<nav class="navbar rounded-box border-b border-gray-600">
 			<div class="flex-1 px-2 lg:flex-none">
-				<a class="text-lg font-bold">daisyUI</a>
+				<a href="/" class="text-lg font-bold">daisyUI</a>
 			</div>
 			<div class="flex flex-1 justify-end px-2">
 				<div class="flex items-stretch">
