Refactor CSS and update Deck creation UI

--- a/Components/Components/AvatarComponent.razor
+++ b/Components/Components/AvatarComponent.razor
@@ -9,13 +9,13 @@
             </div>
         </button>
 
-        <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box shadow-md w-52 p-2 mt-2 space-y-1">
+        <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box shadow-md w-52 p-2 mt-2 space-y-1 z-50">
             <li class="text-sm font-medium text-gray-100">
                 Hi, @Profile?.Name
             </li>
             <li><a href="#" class="sm:hidden rounded-lg py-2 px-4 transition-colors">My Bookmark</a></li>
             <li><a href="#" class="sm:hidden rounded-lg py-2 px-4 transition-colors">My Deck</a></li>
-            <li><a href="/auth/signout" class="text-red-600 hover:bg-gray-900 rounded-lg py-2 px-4 transition-colors">Logout</a>
+            <li><a href="/auth/signout" class="text-red-600 hover:bg-gray-900 rounded-lg py-2 px-4 transition-colors">Sign Out</a>
             </li>
         </ul>
     </div>
