--- a/Components/Pages/MyDeck.razor
+++ b/Components/Pages/MyDeck.razor
@@ -6,6 +6,7 @@
 @using flashcard.Components.Components
 @using flashcard.Components.Icon
 @inject Microsoft.AspNetCore.Components.Authorization.AuthenticationStateProvider AuthenticationStateProvider
+@inject NavigationManager Navigation
 
 <PageTitle>My Decks</PageTitle>
 
