--- a/Components/Components/FlashCardComponent.razor
+++ b/Components/Components/FlashCardComponent.razor
@@ -1,7 +1,7 @@
 @using flashcard.Data
 @inject FlashCardService FlashCardService
 <a href="/d/@DeckData?.Slug" class="block p-6 border rounded-lg shadow bg-neutral hover:bg-opacity-90">
-    <div class="flex flex-col min-h-[8rem] gap-2">
+    <div class="flex flex-col h-[10rem] gap-2">
         <div class="flex grow flex-col gap-5">
             <div class="flex sm:flex-row flex-col sm:items-center justify-between">
                 <p class="text-lg font-semibold ">@DeckData?.Title</p>
