--- a/Components/Pages/Index.razor
+++ b/Components/Pages/Index.razor
@@ -14,7 +14,7 @@
 		<div class="flex min-[480px]:flex-row flex-col w-full max-w-2xl gap-2 items-center">
 			<label class="input input-bordered flex items-center gap-2 w-full rounded-lg">
 				<input type="text" class="grow" placeholder="Search" @oninput="HandleSearch" />
-				<SearchIcon />
+				<IconSearch />
 			</label>
 			<select class="select select-bordered rounded-lg max-[480px]:w-full" @onchange="SelectCategory">
 				<option disabled selected>Select Category</option>
